[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Repo referred as part of the Dependabot test"
name = "dependabotB"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.12"